SASS en INDEX + correcciones

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,142 +1,226 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Quiu</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="./js/bootstrap.bundle.min.js"></script>
-
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
-                </a>
-                <button 
-                    class="navbar-toggler" 
-                    type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbar" 
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="pages/Hotel.html">Hotel</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="pages/Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="pages/Reserva.html">Reserva</a>
-                        </li>
-                        <li class="nav-item scale-up-cente">
-                            <a class="nav-link" href="pages/Contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="" href="#">
+            <img
+              class="nav-logo"
+              src="imagenes/LogoLargoSinFondo.png"
+              alt="Logo Hotel Quiu"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="pages/Hotel.html">Hotel</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="pages/Habitaciones-y-precios.html">Habitaciones y Precios</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="pages/Reserva.html">Reserva</a>
+              </li>
+              <li class="nav-item scale-up-centerm">
+                <a class="a-anchor" href="pages/Contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section>
-            <div class="fotohotel">
-                <!-- Las imagenes mas que nada de las zonas compartidas y la fachada del hotel -->
-            </div>
+      <div>
+        <div class="fotohotel"></div>
 
-            <br>
+        <br />
 
-            <div class="principal lead">
-                <p> ★ ★ ★ </p>
-            </div>
+        <div class="principal lead texto-blanco">
+          <p>★ ★ ★</p>
+        </div>
 
-            <br>
+        <br />
 
-            <div class="principal lead">
-                <p>El fantastico Hotel Quiu está situado en un lugar privilegiado de Cordoba, mas especificamente en el barrio General Paz.</p> 
-                <p>Los servicios están todos incluidos en el precio al igual que nuestro exquisito desayuno, servido junto a la piscina.</p>
-                <p>En Quiu, tiene estacionamiento gratuito y vigilancia las 24 horas y todo el sistema de seguridad necesario para que se sientan seguros durante su estadía.</p>
-            </div>
+        <div class="principal lead texto-blanco">
+          <p>
+            El fantastico Hotel Quiu está situado en un lugar privilegiado de
+            Cordoba, mas especificamente en el barrio General Paz.
+          </p>
+          <p>
+            Los servicios están todos incluidos en el precio al igual que
+            nuestro exquisito desayuno, servido junto a la piscina.
+          </p>
+          <p>
+            En Quiu, tiene estacionamiento gratuito y vigilancia las 24 horas y
+            todo el sistema de seguridad necesario para que se sientan seguros
+            durante su estadía.
+          </p>
+        </div>
+        <div class="cajaMainIzquierda clearfix">
+            <img class= "cajaMainIzquierda__imagen" src="./imagenes/interiorHotel.jpg" alt="foto hotel interior">
+            <p class="cajaMainIzquierda__texto">Seventy es concepto único que fusiona la calidez de una guest house mediterránea y la emoción de un espacio polivalente, pensado y diseñado para ofrecer una experiencia vital inolvidable. Una ambientación espectacular y detallista, una arquitectura de vanguardia y una localización única: entre la elegancia del Passeig de Gràcia, con sus tiendas de lujo, y el costumbrismo cosmopolita de Gràcia, con sus restaurantes de autor, sus boutiques de diseñadores locales y el costumbrismo de barrio popular, hacen de Seventy el lugar donde hay que estar, no solamente si quieres decir que has estado en Barcelona sino también si quieres afirmar que vives la ciudad.</p>
+        </div>
+        <div class="cajaMainDerecha clearfix">
+            <img class= "cajaMainDerecha__imagen" src="./imagenes/restaurant1.jpg" alt="foto restaurant">
+            <p class="cajaMainDerecha__texto">La comida que ofrecemos... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deleniti error tenetur harum numquam sed ducimus, voluptatibus ea quod perspiciatis alias itaque saepe nemo libero officia quas, voluptates similique quam.</p>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
 
-            <br>
-            <br>
-            <br>
-            <br>
+        <div>
+          <img
+            class="logocama"
+            src="./imagenes/PNGIconoCama1.png"
+            alt="logo cama"
+          />
+        </div>
 
+        <br />
+        <br />
+        <br />
+        <br />
+      <div>
+        <div class="principal texto-blanco">
+          <h1 class="display-5">Servicios Generales</h1>
+          <!-- este es flex -->
+          <div class="items lead">
             <div>
-                <img class="logocama" src="./imagenes/PNGIconoCama1.png" alt="logo cama">
+              <ul>
+                <li>Asador</li>
+                <li>SUM con asadores</li>
+                <li>Vigilancia las 24hs</li>
+                <li>Cochera</li>
+                <li>Habitaciones de 30,45 y 60 m2</li>
+              </ul>
             </div>
-
-            <br>
-            <br>
-            <br>
-            <br>
-
-
-            <div class="principal">
-                <h1 class="display-5">Servicios Generales</h1>
-                <!-- este es flex -->
-                <div class="items lead">
-                    <div>
-                        <ul>
-                            <li>Asador</li>
-                            <li>SUM con asadores</li>
-                            <li>Vigilancia las 24hs</li>
-                            <li>Cochera</li>
-                            <li>Habitaciones de 30,45 y 60 m2</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul>
-                            <li>Desayuno junto a la piscina</li>
-                            <li>Wifi</li>
-                            <li>Piscina</li>
-                            <li>Caja de seguridad</li>
-                        </ul>
-                    </div>
-                </div>
+            <div>
+              <ul>
+                <li>Desayuno junto a la piscina</li>
+                <li>Wifi</li>
+                <li>Piscina</li>
+                <li>Caja de seguridad</li>
+              </ul>
             </div>
-        </section>
+          </div>
+        </div>
+      </div>
+        <div class="caja-comentario">
+          <figure class="snip1157">
+            <blockquote>
+              Todo lo que ofrece es excelencia, desde sus vistas, comidas, tragos, eventos como las habitaciones. Tuve la oportunidad de alojarme mas de una oportunidad y cada vez mejor.
+              <div class="arrow"></div>
+            </blockquote>
+            <img
+              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample3.jpg"
+              alt="sq-sample3"
+            />
+            <div class="author">
+              <h5>Jazmin Saffe</h5>
+            </div>
+          </figure>
+          <figure class="snip1157 hover">
+            <blockquote>
+              Mas que encantado con la estadia en este hermoso hotel! El restaurant es un 10 y el desayuno de lo mas completo, como asi tambien los espacios comunes, no voy a dudar en volver! 
+              <div class="arrow"></div>
+            </blockquote>
+            <img
+              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample27.jpg"
+              alt="sq-sample27"
+            />
+            <div class="author">
+              <h5>Agustina Odon</h5>
+            </div>
+          </figure>
+          <figure class="snip1157">
+            <blockquote>
+              Excelente Hotel con todas las comodidades. Salon apto para 200 personas con la mejor tecnologia para conferencias, espacios recreativos y eventos todas las semanas. Es un placer hospedarme en Quiu.
+              <div class="arrow"></div>
+            </blockquote>
+            <img
+              src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample17.jpg"
+              alt="sq-sample17"
+            />
+            <div class="author">
+              <h5>Gaston Juncal</h5>
+            </div>
+          </figure>
+        </div>
+      </section>
     </main>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
     <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item scale-up-center"><a href="./index.html">Inicio</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./pages/Hotel.html">Hotel</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./pages/Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./pages/Reserva.html">Reserva</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./pages/Contacto.html">Contacto</a></li>
-            </ul>
-            <p class="copyright">Hotel Quiu © 2022</p>
-        </footer>
+      <footer>
+        <div class="social">
+          <a href="https://www.instagram.com/"
+            ><i class="icon ion-social-instagram"></i
+          ></a>
+          <a href="https://twitter.com/"
+            ><i class="icon ion-social-twitter"></i
+          ></a>
+          <a href="https://www.facebook.com/"
+            ><i class="icon ion-social-facebook"></i
+          ></a>
+        </div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="./index.html">Inicio</a></li>
+          <li class="list-inline-item">
+            <a href="./pages/Hotel.html">Hotel</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="./pages/Habitaciones-y-precios.html"
+              >Habitaciones y Precios</a
+            >
+          </li>
+          <li class="list-inline-item">
+            <a href="./pages/Reserva.html">Reserva</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="./pages/Contacto.html">Contacto</a>
+          </li>
+        </ul>
+        <p class="copyright">Hotel Quiu © 2022</p>
+      </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-</body>
+  </body>
 </html>
