--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -1,115 +1,174 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Quiu</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="../js/bootstrap.bundle.min.js"></script>
-
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
-                </a>
-                <button 
-                    class="navbar-toggler" 
-                    type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbar" 
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Hotel.html">Hotel</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Reserva.html">Reserva</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <br>
-    <main>
-        <div class="container mb-2">
-            <section class="principal">
-                <div class="get-in-touch">
-                    <h1 class="title lead">Contactanos</h1>
-                    <form class="contact-form row">
-                        <div class="form-field col-lg-6">
-                           <input id="nombre" class="input-text js-input" type="text" required>
-                           <label class="label" for="nombre">Nombre</label>
-                        </div>
-                        <div class="form-field col-lg-6 ">
-                            <input id="apellido" class="input-text js-input" type="text" required>
-                            <label class="label" for="apellido">Apellido</label>
-                         </div>
-                        <div class="form-field col-lg-6 ">
-                           <input id="email" class="input-text js-input" type="email" required>
-                           <label class="label" for="email">E-mail</label>
-                        </div>
-                        <div class="form-field col-lg-6 ">
-                           <input id="telefono" class="input-text js-input" type="number" required>
-                           <label class="label" for="telefono">Telefono</label>
-                        </div>
-                        <div class="form-field col-lg-12">
-                           <input id="mensaje" class="input-text js-input" type="text" required>
-                           <label class="label" for="mensaje">Message</label>
-                        </div>
-                        <div class="form-field col-lg-12">
-                           <input class="submit-btn" type="submit" value="Submit">
-                        </div>
-                    </form>
-                </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.1589739074675!2d-64.18013608361981!3d-31.41755376870462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29b8430ac1b%3A0xefb06247ea18e15c!2zQXYuIE1haXDDuiAyLCBYNTAwMCBJQkIsIEPDs3Jkb2Jh!5e0!3m2!1ses-419!2sar!4v1648582663832!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-        </div>
-    </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item scale-up-center"><a href="../index.html">Inicio</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Hotel.html">Hotel</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Reserva.html">Reserva</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Contacto.html">Contacto</a></li>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="" href="#">
+            <img
+              class="nav-logo"
+              src="../imagenes/LogoLargoSinFondo.png"
+              alt="Logo Hotel Quiu"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Hotel.html">Hotel</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Habitaciones-y-precios.html"
+                  >Habitaciones y Precios</a
+                >
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Reserva.html">Reserva</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Contacto.html">Contacto</a>
+              </li>
             </ul>
-            <p class="copyright">Hotel Quiu © 2022</p>
-        </footer>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <br />
+    <main>
+      <div class="container mb-2">
+        <section class="principal">
+          <div class="get-in-touch">
+            <h1 class="title lead">Contactanos</h1>
+            <form class="contact-form row">
+              <div class="form-field col-lg-6">
+                <input
+                  id="nombre"
+                  class="input-text js-input"
+                  type="text"
+                  required
+                />
+                <label class="label texto-blanco" for="nombre">Nombre</label>
+              </div>
+              <div class="form-field col-lg-6">
+                <input
+                  id="apellido"
+                  class="input-text js-input"
+                  type="text"
+                  required
+                />
+                <label class="label" for="apellido">Apellido</label>
+              </div>
+              <div class="form-field col-lg-6">
+                <input
+                  id="email"
+                  class="input-text js-input"
+                  type="email"
+                  required
+                />
+                <label class="label" for="email">E-mail</label>
+              </div>
+              <div class="form-field col-lg-6">
+                <input
+                  id="telefono"
+                  class="input-text js-input"
+                  type="number"
+                  required
+                />
+                <label class="label" for="telefono">Telefono</label>
+              </div>
+              <div class="form-field col-lg-12">
+                <input
+                  id="mensaje"
+                  class="input-text js-input"
+                  type="text"
+                  required
+                />
+                <label class="label" for="mensaje">Message</label>
+              </div>
+              <div class="form-field col-lg-12">
+                <input class="submit-btn" type="submit" value="Submit" />
+              </div>
+            </form>
+          </div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.1589739074675!2d-64.18013608361981!3d-31.41755376870462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29b8430ac1b%3A0xefb06247ea18e15c!2zQXYuIE1haXDDuiAyLCBYNTAwMCBJQkIsIEPDs3Jkb2Jh!5e0!3m2!1ses-419!2sar!4v1648582663832!5m2!1ses-419!2sar"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </section>
+      </div>
+    </main>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="footer-basic">
+      <footer>
+        <div class="social">
+          <a href="https://www.instagram.com/"
+            ><i class="icon ion-social-instagram"></i
+          ></a>
+          <a href="https://twitter.com/"
+            ><i class="icon ion-social-twitter"></i
+          ></a>
+          <a href="https://www.facebook.com/"
+            ><i class="icon ion-social-facebook"></i
+          ></a>
+        </div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="../index.html">Inicio</a></li>
+          <li class="list-inline-item"><a href="./Hotel.html">Hotel</a></li>
+          <li class="list-inline-item">
+            <a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
+          </li>
+          <li class="list-inline-item"><a href="./Reserva.html">Reserva</a></li>
+          <li class="list-inline-item">
+            <a href="./Contacto.html">Contacto</a>
+          </li>
+        </ul>
+        <p class="copyright">Hotel Quiu © 2022</p>
+      </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-</body>
+  </body>
 </html>
