--- a/Web/pages/Habitaciones-y-precios.html
+++ b/Web/pages/Habitaciones-y-precios.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -20,47 +20,53 @@
     
 </head>
 <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
-                    </a>
-                    <button 
-                        class="navbar-toggler" 
-                        type="button" 
-                        data-bs-toggle="collapse" 
-                        data-bs-target="#navbar" 
-                        >
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar">
-                      <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Hotel.html">Hotel</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Reserva.html">Reserva</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="" href="#">
+          <img
+            class="nav-logo"
+            src="../imagenes/LogoLargoSinFondo.png"
+            alt="Logo Hotel Quiu"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item scale-up-center">
+              <a class="a-anchor" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item scale-up-center">
+              <a class="a-anchor" href="./Hotel.html">Hotel</a>
+            </li>
+            <li class="nav-item scale-up-center">
+              <a class="a-anchor" href="./Habitaciones-y-precios.html"
+                >Habitaciones y Precios</a
+              >
+            </li>
+            <li class="nav-item scale-up-center">
+              <a class="a-anchor" href="./Reserva.html">Reserva</a>
+            </li>
+            <li class="nav-item scale-up-center">
+              <a class="a-anchor" href="./Contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
         <br>
         <div class="container">
         <main class="row mt-5">
             <section class="col col-lg-10">
-              <h1 class="display-1 mb-5">Nuestras habitaciones</h1>
+              <h1 class="display-1 mb-5 texto-blanco">Nuestras habitaciones</h1>
               <div class="row g-5">
                 <div class="col-12 col-md-4">
                   <article class="card effect">
@@ -89,13 +95,13 @@
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
+                          <span class="visually-hidden">Previo</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
+                          <span class="visually-hidden">Siguiente</span>
                         </button>
-                      </div>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Habitacion Gold</h4>
                       <p class="card-text">
@@ -113,11 +119,11 @@
 
                 <div class="col-12 col-md-4">
                   <article class="card effect">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -136,15 +142,15 @@
                             </div>
                           </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
-                      </div>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Habitacion Platinum</h4>
                       <p class="card-text">
@@ -161,11 +167,11 @@
 
                 <div class="col-12 col-md-4">
                   <article class="card effect">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions3" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -184,15 +190,15 @@
                             </div>
                           </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
-                      </div>
+                    </div>
                     <div class="card-body">
                       <h4 class="card-title">Habitacion Diamond</h4>
                       <p class="card-text">
@@ -218,14 +224,24 @@
        </div>
         <div class="footer-basic">
           <footer>
-              <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <div class="social">
+              <a href="https://www.instagram.com/"
+                ><i class="icon ion-social-instagram"></i
+              ></a>
+              <a href="https://twitter.com/"
+                ><i class="icon ion-social-twitter"></i
+              ></a>
+              <a href="https://www.facebook.com/"
+                ><i class="icon ion-social-facebook"></i
+              ></a>
+            </div>
               <ul class="list-inline">
-                <li class="list-inline-item scale-up-center"><a href="../index.html">Inicio</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Hotel.html">Hotel</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Reserva.html">Reserva</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Contacto.html">Contacto</a></li>
-              </ul>
+                <li class="list-inline-item"><a href="../index.html">Inicio</a></li>
+                <li class="list-inline-item"><a href="./Hotel.html">Hotel</a></li>
+                <li class="list-inline-item"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
+                <li class="list-inline-item"><a href="./Reserva.html">Reserva</a></li>
+                <li class="list-inline-item"><a href="./Contacto.html">Contacto</a></li>
+            </ul>
               <p class="copyright">Hotel Quiu © 2022</p>
           </footer>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
