--- a/Web/pages/Hotel.html
+++ b/Web/pages/Hotel.html
@@ -1,91 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Quiu</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="../js/bootstrap.bundle.min.js"></script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
-                </a>
-                <button 
-                    class="navbar-toggler" 
-                    type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbar" 
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Hotel.html">Hotel</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Reserva.html">Reserva</a>
-                        </li>
-                        <li class="nav-item scale-up-center">
-                            <a class="nav-link" href="./Contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <br>
-    <main>
-        <section>
-            <div>
-                <img class="habitacion" src="../imagenes/platinum1.jpg" alt="Imagenes de las habitaciones">
-            </div>
-            <br>
-            <br>
-
-        </section>
-    </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item scale-up-center"><a href="../index.html">Inicio</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Hotel.html">Hotel</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Reserva.html">Reserva</a></li>
-                <li class="list-inline-item scale-up-center"><a href="./Contacto.html">Contacto</a></li>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="" href="#">
+            <img
+              class="nav-logo"
+              src="../imagenes/LogoLargoSinFondo.png"
+              alt="Logo Hotel Quiu"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Hotel.html">Hotel</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Habitaciones-y-precios.html"
+                  >Habitaciones y Precios</a
+                >
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Reserva.html">Reserva</a>
+              </li>
+              <li class="nav-item scale-up-center">
+                <a class="a-anchor" href="./Contacto.html">Contacto</a>
+              </li>
             </ul>
-            <p class="copyright">Hotel Quiu © 2022</p>
-        </footer>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <br />
+    <main>
+      <section>
+        <div>
+          <img
+            class="habitacion"
+            src="../imagenes/platinum1.jpg"
+            alt="Imagenes de las habitaciones"
+          />
+        </div>
+      </section>
+    </main>
+
+    <div class="footer-basic">
+      <footer>
+        <div class="social">
+          <a href="https://www.instagram.com/"
+            ><i class="icon ion-social-instagram"></i
+          ></a>
+          <a href="https://twitter.com/"
+            ><i class="icon ion-social-twitter"></i
+          ></a>
+          <a href="https://www.facebook.com/"
+            ><i class="icon ion-social-facebook"></i
+          ></a>
+        </div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="../index.html">Inicio</a></li>
+          <li class="list-inline-item"><a href="./Hotel.html">Hotel</a></li>
+          <li class="list-inline-item">
+            <a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
+          </li>
+          <li class="list-inline-item"><a href="./Reserva.html">Reserva</a></li>
+          <li class="list-inline-item">
+            <a href="./Contacto.html">Contacto</a>
+          </li>
+        </ul>
+        <p class="copyright">Hotel Quiu © 2022</p>
+      </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-</body>
+  </body>
 </html>
