SASS en index + components

--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -81,7 +81,7 @@
                   type="text"
                   required
                 />
-                <label class="label texto-blanco" for="nombre">Nombre</label>
+                <label class="label" for="nombre">Nombre</label>
               </div>
               <div class="form-field col-lg-6">
                 <input
