--- a/Web/index.html
+++ b/Web/index.html
@@ -28,12 +28,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="" href="#">
-            <img
-              class="nav-logo"
-              src="imagenes/LogoLargoSinFondo.png"
-              alt="Logo Hotel Quiu"
-            />
+          <a class="fs-2" href="index.html">
+            Hotel Quiu 
           </a>
           <button
             class="navbar-toggler"
@@ -93,13 +89,19 @@
             durante su estadía.
           </p>
         </div>
+        <br>
+        <br>
         <div class="cajaMainIzquierda clearfix">
             <img class= "cajaMainIzquierda__imagen" src="./imagenes/interiorHotel.jpg" alt="foto hotel interior">
-            <p class="cajaMainIzquierda__texto">Seventy es concepto único que fusiona la calidez de una guest house mediterránea y la emoción de un espacio polivalente, pensado y diseñado para ofrecer una experiencia vital inolvidable. Una ambientación espectacular y detallista, una arquitectura de vanguardia y una localización única: entre la elegancia del Passeig de Gràcia, con sus tiendas de lujo, y el costumbrismo cosmopolita de Gràcia, con sus restaurantes de autor, sus boutiques de diseñadores locales y el costumbrismo de barrio popular, hacen de Seventy el lugar donde hay que estar, no solamente si quieres decir que has estado en Barcelona sino también si quieres afirmar que vives la ciudad.</p>
+            <p class="">Quiu es concepto único que fusiona la calidez de una guest house mediterránea y la emoción de un espacio polivalente, pensado y diseñado para ofrecer una experiencia vital inolvidable. Una ambientación espectacular y detallista, una arquitectura de vanguardia y una localización única: entre la elegancia del Passeig de Gràcia, con sus tiendas de lujo, y el costumbrismo cosmopolita de Gràcia, con sus restaurantes de autor, sus boutiques de diseñadores locales y el costumbrismo de barrio popular, hacen de Quiu el lugar donde hay que estar, no solamente si quieres decir que has estado en Cordoba sino también si quieres afirmar que vives la ciudad.</p>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="cajaMainDerecha clearfix">
             <img class= "cajaMainDerecha__imagen" src="./imagenes/restaurant1.jpg" alt="foto restaurant">
-            <p class="cajaMainDerecha__texto">La comida que ofrecemos... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus deleniti error tenetur harum numquam sed ducimus, voluptatibus ea quod perspiciatis alias itaque saepe nemo libero officia quas, voluptates similique quam.</p>
+            <p class="cajaMainDerecha__texto">Descubra el nuevo destino gastronómico del famoso chef español Dani García. Elegante pero informal, esta dinámica brasserie combina especialidades con estrellas Michelin con la cocina Argentina tradicional.</p>
         </div>
         <br />
         <br />
@@ -118,31 +120,6 @@
         <br />
         <br />
         <br />
-      <div>
-        <div class="principal texto-blanco">
-          <h1 class="display-5">Servicios Generales</h1>
-          <!-- este es flex -->
-          <div class="items lead">
-            <div>
-              <ul>
-                <li>Asador</li>
-                <li>SUM con asadores</li>
-                <li>Vigilancia las 24hs</li>
-                <li>Cochera</li>
-                <li>Habitaciones de 30,45 y 60 m2</li>
-              </ul>
-            </div>
-            <div>
-              <ul>
-                <li>Desayuno junto a la piscina</li>
-                <li>Wifi</li>
-                <li>Piscina</li>
-                <li>Caja de seguridad</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
         <div class="caja-comentario">
           <figure class="snip1157">
             <blockquote>
