--- a/Web/pages/Reserva.html
+++ b/Web/pages/Reserva.html
@@ -29,13 +29,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="" href="#">
-            <img
-              class="nav-logo"
-              src="../imagenes/LogoLargoSinFondo.png"
-              alt="Logo Hotel Quiu"
-            />
-          </a>
+          <a class="fs-2" href="../index.html"> Hotel Quiu </a>
           <button
             class="navbar-toggler"
             type="button"
