correcciones en alt de imagenes

--- a/Web/index.html
+++ b/Web/index.html
@@ -128,7 +128,7 @@
             </blockquote>
             <img
               src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample3.jpg"
-              alt="sq-sample3"
+              alt="imagen persona"
             />
             <div class="author">
               <h5>Jazmin Saffe</h5>
@@ -141,7 +141,7 @@
             </blockquote>
             <img
               src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample27.jpg"
-              alt="sq-sample27"
+              alt="imagen persona"
             />
             <div class="author">
               <h5>Agustina Odon</h5>
@@ -154,7 +154,7 @@
             </blockquote>
             <img
               src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample17.jpg"
-              alt="sq-sample17"
+              alt="imagen persona"
             />
             <div class="author">
               <h5>Gaston Juncal</h5>
