--- a/Web/pages/Hotel.html
+++ b/Web/pages/Hotel.html
@@ -76,10 +76,10 @@
           <img
             class="gallery__img"
             src="../imagenes/interiorlobby.jpg"
-            alt=""
+            alt="Interior Lobby"
           />
           <label for="img-1" class="gallery__thumb"
-            ><img src="../imagenes/interiorlobby.jpg" alt=""
+            ><img src="../imagenes/interiorlobby.jpg" alt="Interior Lobby"
           /></label>
         </div>
         <div class="gallery__item">
@@ -89,9 +89,13 @@
             name="gallery"
             class="gallery__selector"
           />
-          <img class="gallery__img" src="../imagenes/piscina.jpg" alt="" />
+          <img
+            class="gallery__img"
+            src="../imagenes/piscina.jpg"
+            alt="Piscina"
+          />
           <label for="img-2" class="gallery__thumb"
-            ><img src="../imagenes/piscina.jpg" alt=""
+            ><img src="../imagenes/piscina.jpg" alt="Piscina"
           /></label>
         </div>
         <div class="gallery__item">
@@ -101,9 +105,9 @@
             name="gallery"
             class="gallery__selector"
           />
-          <img class="gallery__img" src="../imagenes/gym.jpg" alt="" />
+          <img class="gallery__img" src="../imagenes/gym.jpg" alt="Gimnasio" />
           <label for="img-3" class="gallery__thumb"
-            ><img src="../imagenes/gym.jpg" alt=""
+            ><img src="../imagenes/gym.jpg" alt="Gimnasio"
           /></label>
         </div>
         <div class="gallery__item">
@@ -116,10 +120,10 @@
           <img
             class="gallery__img imagengaleria"
             src="../imagenes/restobar.jpg"
-            alt=""
+            alt="RestoBar"
           />
           <label for="img-4" class="gallery__thumb"
-            ><img src="../imagenes/restobar.jpg" alt=""
+            ><img src="../imagenes/restobar.jpg" alt="RestoBar"
           /></label>
         </div>
         <div class="gallery__item">
@@ -132,10 +136,10 @@
           <img
             class="gallery__img imagengaleria"
             src="../imagenes/comidaresto2.jpg"
-            alt=""
+            alt="Plato Restaurant"
           />
           <label for="img-5" class="gallery__thumb"
-            ><img src="../imagenes/comidaresto2.jpg" alt=""
+            ><img src="../imagenes/comidaresto2.jpg" alt="Plato Restaurant"
           /></label>
         </div>
         <div class="gallery__item">
@@ -148,10 +152,10 @@
           <img
             class="gallery__img imagengaleria"
             src="../imagenes/comidaresto.jpg"
-            alt=""
+            alt="Plato Restaurant"
           />
           <label for="img-6" class="gallery__thumb"
-            ><img src="../imagenes/comidaresto.jpg" alt=""
+            ><img src="../imagenes/comidaresto.jpg" alt="Plato Restaurant"
           /></label>
         </div>
       </section>
