--- a/Web/pages/Habitaciones-y-precios.html
+++ b/Web/pages/Habitaciones-y-precios.html
@@ -72,17 +72,17 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../imagenes/Gold1.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/Gold1.jpg" class="d-block w-100" alt="Habitacion Gold">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/gold2.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/gold2.jpg" class="d-block w-100" alt="Habitacion Gold">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/gold3.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/gold3.jpg" class="d-block w-100" alt="Habitacion Gold">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
@@ -132,17 +132,17 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../imagenes/platinum1.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/platinum1.jpg" class="d-block w-100" alt="Habitacion Platinum">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/platinum2.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/platinum2.jpg" class="d-block w-100" alt="Habitacion Platinum">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/platinum3.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/platinum3.jpg" class="d-block w-100" alt="Habitacion Platinum">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
@@ -192,17 +192,17 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="../imagenes/diamond1.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/diamond1.jpg" class="d-block w-100" alt="Habitacion Diamond">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/diamond2.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/diamond2.jpg" class="d-block w-100" alt="Habitacion Diamond">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="../imagenes/diamond3.jpg" class="d-block w-100" alt="...">
+                            <img src="../imagenes/diamond3.jpg" class="d-block w-100" alt="Habitacion Diamond">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                           </div>
