--- a/Web/pages/Reserva.html
+++ b/Web/pages/Reserva.html
@@ -71,14 +71,14 @@
             <div class="col-12 col-md-4">
               <article class="card effect">
                 <div
-                  id="carouselExampleCaptions"
+                  id="carouselExampleCaptions1"
                   class="carousel slide"
                   data-bs-ride="carousel"
                 >
                   <div class="carousel-indicators">
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions1"
                       data-bs-slide-to="0"
                       class="active"
                       aria-current="true"
@@ -86,13 +86,13 @@
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions1"
                       data-bs-slide-to="1"
                       aria-label="Slide 2"
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions1"
                       data-bs-slide-to="2"
                       aria-label="Slide 3"
                     ></button>
@@ -102,7 +102,7 @@
                       <img
                         src="../imagenes/Gold1.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Gold"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -110,7 +110,7 @@
                       <img
                         src="../imagenes/gold2.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Gold"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -118,7 +118,7 @@
                       <img
                         src="../imagenes/gold3.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Gold"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -126,7 +126,7 @@
                   <button
                     class="carousel-control-prev"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions1"
                     data-bs-slide="prev"
                   >
                     <span
@@ -138,7 +138,7 @@
                   <button
                     class="carousel-control-next"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions1"
                     data-bs-slide="next"
                   >
                     <span
@@ -181,14 +181,14 @@
             <div class="col-12 col-md-4">
               <article class="card effect">
                 <div
-                  id="carouselExampleCaptions"
+                  id="carouselExampleCaptions2"
                   class="carousel slide"
                   data-bs-ride="carousel"
                 >
                   <div class="carousel-indicators">
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions2"
                       data-bs-slide-to="0"
                       class="active"
                       aria-current="true"
@@ -196,13 +196,13 @@
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions2"
                       data-bs-slide-to="1"
                       aria-label="Slide 2"
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions2"
                       data-bs-slide-to="2"
                       aria-label="Slide 3"
                     ></button>
@@ -212,7 +212,7 @@
                       <img
                         src="../imagenes/platinum1.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Platinum"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -220,7 +220,7 @@
                       <img
                         src="../imagenes/platinum2.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Platinum"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -228,7 +228,7 @@
                       <img
                         src="../imagenes/platinum3.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Platinum"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -236,7 +236,7 @@
                   <button
                     class="carousel-control-prev"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions2"
                     data-bs-slide="prev"
                   >
                     <span
@@ -248,7 +248,7 @@
                   <button
                     class="carousel-control-next"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions2"
                     data-bs-slide="next"
                   >
                     <span
@@ -291,14 +291,14 @@
             <div class="col-12 col-md-4">
               <article class="card effect">
                 <div
-                  id="carouselExampleCaptions"
+                  id="carouselExampleCaptions3"
                   class="carousel slide"
                   data-bs-ride="carousel"
                 >
                   <div class="carousel-indicators">
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions3"
                       data-bs-slide-to="0"
                       class="active"
                       aria-current="true"
@@ -306,13 +306,13 @@
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions3"
                       data-bs-slide-to="1"
                       aria-label="Slide 2"
                     ></button>
                     <button
                       type="button"
-                      data-bs-target="#carouselExampleCaptions"
+                      data-bs-target="#carouselExampleCaptions3"
                       data-bs-slide-to="2"
                       aria-label="Slide 3"
                     ></button>
@@ -322,7 +322,7 @@
                       <img
                         src="../imagenes/diamond1.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Diamond"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -330,7 +330,7 @@
                       <img
                         src="../imagenes/diamond2.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Diamond"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -338,7 +338,7 @@
                       <img
                         src="../imagenes/diamond3.jpg"
                         class="d-block w-100"
-                        alt="..."
+                        alt="Habitacion Diamond"
                       />
                       <div class="carousel-caption d-none d-md-block"></div>
                     </div>
@@ -346,7 +346,7 @@
                   <button
                     class="carousel-control-prev"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions3"
                     data-bs-slide="prev"
                   >
                     <span
@@ -358,7 +358,7 @@
                   <button
                     class="carousel-control-next"
                     type="button"
-                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-target="#carouselExampleCaptions3"
                     data-bs-slide="next"
                   >
                     <span
