--- a/Web/index.html
+++ b/Web/index.html
@@ -32,7 +32,7 @@
             Hotel Quiu 
           </a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler color1"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbar"
@@ -65,16 +65,10 @@
     <main>
       <div>
         <div class="fotohotel"></div>
-
-        <br />
-
-        <div class="principal lead texto-blanco">
+        <div class="principal lead texto-blanco ">
           <p>★ ★ ★</p>
-        </div>
-
-        <br />
-
-        <div class="principal lead texto-blanco">
+        </div>        
+        <div class="principal lead texto-blanco padding">
           <p>
             El fantastico Hotel Quiu está situado en un lugar privilegiado de
             Cordoba, mas especificamente en el barrio General Paz.
@@ -89,25 +83,14 @@
             durante su estadía.
           </p>
         </div>
-        <br>
-        <br>
         <div class="cajaMainIzquierda clearfix">
             <img class= "cajaMainIzquierda__imagen" src="./imagenes/interiorHotel.jpg" alt="foto hotel interior">
-            <p class="">Quiu es concepto único que fusiona la calidez de una guest house mediterránea y la emoción de un espacio polivalente, pensado y diseñado para ofrecer una experiencia vital inolvidable. Una ambientación espectacular y detallista, una arquitectura de vanguardia y una localización única: entre la elegancia del Passeig de Gràcia, con sus tiendas de lujo, y el costumbrismo cosmopolita de Gràcia, con sus restaurantes de autor, sus boutiques de diseñadores locales y el costumbrismo de barrio popular, hacen de Quiu el lugar donde hay que estar, no solamente si quieres decir que has estado en Cordoba sino también si quieres afirmar que vives la ciudad.</p>
+            <p class="">Quiu es concepto único que fusiona la calidez de una guest house mediterránea y la emoción de un espacio polivalente, pensado y diseñado para ofrecer una experiencia vital inolvidable. Una ambientación espectacular y detallista, una arquitectura de vanguardia y una localización única hacen de Quiu el lugar donde hay que estar, no solamente si quieres decir que has estado en Cordoba sino también si quieres afirmar que vives la ciudad.</p>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="cajaMainDerecha clearfix">
             <img class= "cajaMainDerecha__imagen" src="./imagenes/restaurant1.jpg" alt="foto restaurant">
             <p class="cajaMainDerecha__texto">Descubra el nuevo destino gastronómico del famoso chef español Dani García. Elegante pero informal, esta dinámica brasserie combina especialidades con estrellas Michelin con la cocina Argentina tradicional.</p>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
-
         <div>
           <img
             class="logocama"
@@ -115,11 +98,6 @@
             alt="logo cama"
           />
         </div>
-
-        <br />
-        <br />
-        <br />
-        <br />
         <div class="caja-comentario">
           <figure class="snip1157">
             <blockquote>
