--- a/Web/pages/Habitaciones-y-precios.html
+++ b/Web/pages/Habitaciones-y-precios.html
@@ -56,8 +56,7 @@
       </div>
     </nav>
   </header>
-        <br>
-        <div class="container">
+        <div class="container padding">
         <main class="row mt-5">
             <section class="col col-lg-10">
               <h1 class="display-1 mb-5 texto-blanco">Nuestras habitaciones</h1>
@@ -248,12 +247,6 @@
               </div>
             </section>
         </main>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
        </div>
         <div class="footer-basic">
           <footer>
