--- a/Web/pages/Hotel.html
+++ b/Web/pages/Hotel.html
@@ -62,7 +62,6 @@
         </div>
       </nav>
     </header>
-    <br />
     <main>
       <section class="gallery">
         <div class="gallery__item">
@@ -159,10 +158,8 @@
           /></label>
         </div>
       </section>
-      <br />
-      <br />
       <div>
-        <div class="principal texto-blanco">
+        <div class="principal texto-blanco padding">
           <h1 class="display-5">Servicios Generales</h1>
           <!-- este es flex -->
           <div class="items lead">
@@ -188,9 +185,7 @@
       </div>
       <br />
       <br />
-      <br />
-      <br />
-      <div class="principal texto-blanco">
+      <div class="politicas texto-blanco">
         <h2>POLITICAS</h2>
         <p>
           HORAS DE ENTRADA/SALIDA Hora de entrada: 15:00 Hora de salida: 12:00
